# Mon-VS-Ultra

./: .env.example  .eslintrc.js  Cargo.toml  README.md  jest.config.js  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
.mon-vs/: dual-linter-rules.json
ar-spatial/ephemeral-logic/: destruction-rules.json  package.json
docker/: Dockerfile.api  app.dockerfile  docker-compose.yml
social-distribution/: scheduling-manifest.json
src/: index.ts
src/backend/: server.js
src/frontend/: index.html
